# ChangeLog for media-libs/libv4l
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libv4l/ChangeLog,v 1.72 2012/09/26 05:42:34 vapier Exp $

  26 Sep 2012; Mike Frysinger <vapier@gentoo.org>
  +files/libv4l-0.8.8-drop-Wp-flags.patch, libv4l-0.8.8.ebuild:
  Drop useless gcc-specific -Wp flags.

  27 Aug 2012; Raúl Porcel <armin76@gentoo.org> libv4l-0.8.8.ebuild:
  alpha/ia64/sparc stable wrt #419099

  06 Aug 2012; Brent Baude <ranger@gentoo.org> libv4l-0.8.8.ebuild:
  Marking libv4l-0.8.8 ppc64 for bug 419099

  06 Aug 2012; Brent Baude <ranger@gentoo.org> libv4l-0.8.8.ebuild:
  Marking libv4l-0.8.8 ppc for bug 419099

  24 Jul 2012; Markos Chandras <hwoarang@gentoo.org> libv4l-0.8.8.ebuild:
  Stable on amd64 wrt bug #419099

  24 Jul 2012; Jeroen Roovers <jer@gentoo.org> libv4l-0.8.8.ebuild:
  Stable for HPPA (bug #419099).

  23 Jul 2012; Markus Meier <maekke@gentoo.org> libv4l-0.8.8.ebuild:
  arm stable, bug #419099

  16 Jul 2012; Jeff Horelick <jdhore@gentoo.org> libv4l-0.8.8.ebuild:
  marked x86 per bug 419099

*libv4l-0.8.8 (14 Apr 2012)

  14 Apr 2012; Alexis Ballier <aballier@gentoo.org> +libv4l-0.8.8.ebuild:
  version bump

*libv4l-0.8.6 (19 Feb 2012)

  19 Feb 2012; Alexis Ballier <aballier@gentoo.org> +libv4l-0.8.6.ebuild:
  version bump

*libv4l-0.8.5-r1 (02 Feb 2012)

  02 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> +libv4l-0.8.5-r1.ebuild,
  +files/libv4l-0.8.5-disable_fancy_upsampling.patch:
  Since JPEG 7.x the fancy upsampling has been enabled by default and should
  explicitely be disabled in apps not supporting it wrt #401865 by Denilson Sá

  13 Jan 2012; Mike Frysinger <vapier@gentoo.org> libv4l-0.8.5.ebuild:
  Simplify ebuild a bit.

  30 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> -libv4l-0.8.1.ebuild,
  -libv4l-0.8.3.ebuild, -libv4l-0.8.4.ebuild:
  old

  30 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> libv4l-0.8.5.ebuild:
  ppc/ppc64 stable wrt #382727
