@@ -4,28 +4,22 @@ Hash: SHA256
 AUX libv4l-0.8.5-disable_fancy_upsampling.patch 370 SHA256 b1bfb0cdddae992b0d1b062044fe9c8f81ea95c98a15d6a4c9fce5f669e82719 SHA512 8e2d04597bf9b9704c345eac913e969446947ca027ec0e06915f6a262ebcd67e5f69519336348fd8bb8ba24a40b01d253484a9401ef12b1d0d7b10321deb824c WHIRLPOOL d502fd02047a601873dcd1767337e33423e53d176273dddace8326dab9960e55424a5f179893842f08f8ac160d8348619fbd72b2f43bea5c8d3556468276074b
 AUX libv4l-0.8.8-drop-Wp-flags.patch 727 SHA256 523b5da5faa4408c4699097bd387d256893b7edba3f941c818ba360281183b81 SHA512 4962ab69d442142273980ffc321286b2aec219fe281b79d207b91c4cfbc37c9ace77042a0db89d67911b0af8ac70881a1ac6bb121a87c540f1ccce21c54ea8a2 WHIRLPOOL a051a41f725ecd7f80a02898d712f2befba4024aecc32017b75d044cfb460404cf3b83d3bdacac507e68d85bba4df000107ac883ec90d753598f8a3cefbc249c
 DIST v4l-utils-0.8.5.tar.bz2 373882 SHA256 c205848fbaf3489b97519dae04da31be4998bbc170a2ca9791357a8a549e594c SHA512 d84bea5658b350447741e2aae36458c2ba29f4d6beb8dd4965626a1f60ea1f0b7d12751cab9501c1c5cb3ba9872fc7ac237553e452b3c348f907c4a8274f954a WHIRLPOOL fa941a7e30792993144e7b55dc88cd10c09100e94142ed8c0c0f68bcaf8d12a0c57511f5698225ff9f057c0eb4696d0eff6d0d55fa46673c3db10f5bb9b4b6ca
-DIST v4l-utils-0.8.6.tar.bz2 375254 SHA256 3a53ac6348363bbdc94ea11ca48dadc0342a579384a910f6c956b6a185f0c20f SHA512 ab3a5637309a97b30afbe73c1025095a7a99355a6ff732a7e3f6e6a98862ced5fb95e5336f72acee41b11d8e9a2a1770e376b8791760369d102940394c074f71 WHIRLPOOL 2ccbda32c9a8989b33ffc7e8647cbf1060a0a49c9ff6936ada5e6b5d2945cf223308f8af094b7c0b2ee0451aeb815946d4fd3aca3ce4bf8a51da947fe33662ad
 DIST v4l-utils-0.8.8.tar.bz2 420888 SHA256 5fa4c6f4b6f5410de57271a03cc9a15f15195ef3fc05a8e42ecf507d6d70a87f SHA512 4bc103e8431fa237612fcaa6addd63a03186ade64e306e83384192f0051e6c0f36b22771e66875062a984e1b0e0e255a945afe6dc0d1356560c140293c8d11c4 WHIRLPOOL bcfac96bf78ee9da822ece69ad8f0a2da534ad3103170e07dd192f22c04cf48421769c9f62c6ab1ba8dc2894827e98dd2c1c1fc04b762063dab0f8f5a027f88a
-EBUILD libv4l-0.8.5-r1.ebuild 1101 SHA256 afd9a8c386a2e16e63e2fe237899a14aa64b63ef6e8adcee5910524d4164d1a8 SHA512 183fd3a740c34f6f5186e79b3e4c0c596cb4233a5617443eb32b70f9139ad7f4a9042a7f8b0ef0c5ae7c0ed1c7801d148b299506d1d1b477436827a612344c16 WHIRLPOOL 1ada72321226011c7a4181c4d82f058613d28c7ced35b864a2c689a199da25b15a7f5d4bb1a3f8f38cad944eba0a6f22b295d2c9a1eb62cc3972738447d28a44
-EBUILD libv4l-0.8.5.ebuild 1020 SHA256 4289312952a7a7e77439b75ddd13726eba6f5c54d254f88759da66006047eed5 SHA512 e25f407b13bfca3c1779d352053bfaf2c2280133bb234d00f93a8138bd25fc7fec98a018ad55b4d100f6b91d8bd98202dc8597abd2ac8e0e73cbb3b952ac1dc4 WHIRLPOOL 5265b04750a70f7252a805c45bf655f441532521b3533aefe33d8ff977066a6256e418d999cead17fe2f937f04ca190a3aadf8e00a345bcc93af85609d9c19ad
-EBUILD libv4l-0.8.6.ebuild 1038 SHA256 3e754e11f060d66d50939a15be807f3ffaee883d36a48f9158b64bdeade399e7 SHA512 0550fecd0de9a6757bf4f6218a1a0eef618eed48733837a2677c5c7ebd1029b47bdd57e03fc2e42d3333d89a4d5ca2543758a42e597737c9503a85d681c11ab3 WHIRLPOOL 6feee5a802a34b94aedd821563348f5bc69e6d4eb1f14ebb0ed6ffe082d5de3eee4beca9eb4e20201579a29d24260d0c97b1360e16a56ef2d629afad905a0621
-EBUILD libv4l-0.8.8.ebuild 1074 SHA256 fee8f26e9ab34ab7eba0cc464a703e3e8a658e1c518412317d0c09a9f47cb08c SHA512 f0d79447e37feaf39361ed00b6ffc8f90fdd77576a13552e7ae5555452502fcd75d05d72df2cdf933814ccb4b9f62eb843f6931c358ea70d3485c7e5e37fc523 WHIRLPOOL a7ab80a775a668b563528ec5bf1e6fceca816119e2a11b7624ee42b4beaf88090f86861185537338883dd3ecdcc11c2304f4c7a7b6fce20d5a1b913153803604
-MISC ChangeLog 8636 SHA256 b0e9325af6151ab0865fbf6552a31e7e4b0c9026d3785d509b12cd17e70714c3 SHA512 aea5cb0a3e035cad36f195d2c6419d28b76fb41af8d6031117c91eb2f98b5cd01adc894a67f4cc037c813732674f99c98d91f0b40a0ffcf635d5ccec3a72cf39 WHIRLPOOL 4748b5dcb1894f25e1841dab90289a1ce3f6f960b5d036a0c04edc9acbf5210fa3244f3acf69be6adc0b86f03b6b0fdfbc46e12d9cc594608d691c9b2ea54657
+DIST v4l-utils-0.8.9.tar.bz2 460681 SHA256 3e5511c252b3c320d0b03418f7ee19b42d00ed0871c6b525779007416e46d08e SHA512 3778dbd4d0bb44c6f4762a8551625c1f5bfcf7a10de33c71c2442483d496bc177aef979b747b327f4eca3229fc22eec484de7308588acf9fc48ae6d1d5edee40 WHIRLPOOL 346d2c23c5e8b8ac3128100cf660b1f4880ec5fffd3fa107accf7f536adeacc945cb9aadd61f2f99a6fd32bd7a44912680d2cf867f0a84f28c949707634c676f
+EBUILD libv4l-0.8.5-r1.ebuild 1102 SHA256 406164aaba46c310e4c79ab76ddbceea68b849e6ff953152df9541a7dbac40e7 SHA512 f5f612ed3f74f131e189baf03c40e0ec4f15f6b1df69a9f5b7a5da5b3a5053edf210d4a10f7aede726f6f58dbe94e2b620a5c8ec8a008a8b61b6299eda4d36d0 WHIRLPOOL 27d13476671f828239a9bd433ba3ecff4b15c7b2fb1df681d02245a42514f9a4c3e12c8bf1116736b49847dbe62841cbf71ff65083a1ff954510dbfee8853093
+EBUILD libv4l-0.8.5.ebuild 1024 SHA256 b8f308a174b57138de8e615e2dcc5f395af04a71a4e1fdd72f3ef95cf611a83a SHA512 c51b88ca5e8d73241ec43cc17612446556ac905a9d966798b6c25a9888a84794c7548cab75f69cefbfd556323123de5bbdadaf73344fa39614d8ee7b48e1525e WHIRLPOOL 737e696d8068097c8e142bf9e4fa97f90e525ec2b07a4806abb3f4864f1362466abf5710a4d26a195786e5f277aa403b77f134f18ce1d1c7f3107cb6ccee45cd
+EBUILD libv4l-0.8.8.ebuild 1079 SHA256 44fde72af01ded156dd15e81c048910262f41ec87e75a05822d42c4253198160 SHA512 72ae463b2733955696e5db83820f54f594d372feea922fe74415032203194ef2a6a95c3ef4b3a089fc1f33f8fce6a9adbf4508a4ab55b2c36a4166883bd3da0f WHIRLPOOL 355347bf94811e27dde3a1e8bfdeea1cc57586a5953618c40b320c0cc0571f8ff6cf3e4fd0f5a9e41cdfa7e2cfbf7b1e7c3bee547b0c576f239804f9a67e5d5d
+EBUILD libv4l-0.8.9.ebuild 1094 SHA256 091e95ee2b2f9a320466688f94ead664dde8585353fc9f1ddd76706a75e67cc3 SHA512 bdaadbe9a1359ba82a595ac00f9220a041612450ea5051cc09a03127b3b83b641d993237b2b1d3588d7178ea9a60c79c48301e65ebb7f83ea215be83aeac5cd3 WHIRLPOOL e29b4b2dace87df81da39413027c0abdd721bbb126e54ff987ed7427e3bcf45baf802010755ddb1a4f12546db47d11335d8a03389a9d1931288444c5aae6d2e5
+MISC ChangeLog 9008 SHA256 12d9bb8db0ec7d513a4d58ab1a07081b74f2a5a46dda21c46d1c4fdb548d2950 SHA512 b45bd077c356ba041801a1de19f72e019223d7f4391aa502b74fd43fae54d6aa14c19469278efaea8ad0586a80939d30ba73a725720c025746dce120890b3205 WHIRLPOOL 93318a4ed60f9d6f6b175828b2a1152e3e878b1d9864d6cc9cb019562759cd8a555c78d2ed1cbda07f6a3618fd257f40dff81189e1ac1adc7005c1476deb739d
 MISC metadata.xml 1231 SHA256 80547ef9b74e128f3424789330baaad6ec48910e1c17412ce16e7b3ea4ff290a SHA512 cd4f2bd85f4da28c0f5b8c5d2cc42f2e2d3221827346ea99dd5907d835c2f84b99a5d9f38ff66437cb2169330c96f277cdd17f20b43950380c85ccdf75d2b4ec WHIRLPOOL 6a5cbcb3faa6fc745906e655ad5942b497085bd73c7347b938726172f31d776670bfa2f0963cca8881fdd6b74572d00d52983c9e876f567792a27be40aad891b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQYpXVAAoJELEHsLL7fEFWbyYQAKxqa0Psh1vKC+pjUC5OX3ZF
-JvC+sS7je9dZ3q6wQgJHcva8zX6mNFxWesPydevgC7gmTDwx3Rg6fRREahnx8PgJ
-JcDE5sO8K6lYN58Brp5O8jy1He73u1cp1mCmxXOL6vPqWb8nSraUS1d7RQ4KPADj
-ejNNyxCyKBkQrvoNsOk2XPeOHjYYwzEOtbeh6o9AWRfUZVHbctcDw6d1UGFZNG6m
-KlvHLFJF33jKkqGcqmDQmclQGDXK8ZvVTcKrAh64rykl5wo0EMammSDnGllcSMw7
-1VU3n6kEzU1eeNCJszksPmBN/5qC+6uftw3vJdYFSOljt2ELWIVrHk9aOGLbmWwo
-maqhMwKXTq+JuEbgnVJHZDcxdYczGInHxOJrftggY1tvs+lMk9TpqSL4LbniVvpg
-n2o4KRqsqx0dIzoUNqySqCjmZJlGDIfiKmROAHGJsTVLqLXDH79CM+QgW1kDtxYN
-B5K/OgHkiRd4WPVcbvGN1D1jio6y2yv6AAwzVgN2d62lyQjIhHTLDR1Q2bDEaEJO
-yRFk+jlo0GlBKsVJm1buroh+QDV46ItF6KFsHFwZ919Q3M5tSyFvFrSWve98NGqq
-w7zIf6OFJHqFyiTV7ikOWfEHORN+VwLjGuv1QxInyBAXFsTjSHiOxQH0TeMnol34
-jkgWgm51kdYfUv2kfTCe
-=F/fj
+iQEcBAEBCAAGBQJQgk+dAAoJEJ0WA1zPCt1hMiMH/0ytbV7EEnmI0UvRtfePFpmz
+/9/UuWxzuUFJg9rQMLPPokBQoQxAofVOMOtKZRdrLaIV5yfH+hEznW6sNEmrP6F8
+BfTdCHhKjV/QnAygwG2pFLrSj8oHo3ktKfUrRckmuHkXPjSbMawyTf32fBzc3BLI
+ih5ckpHGdsuKaXxTQ6niHH3MKlo3F7SHGDZpfkUV6Vb+qmKdfmA5E820p7QUr0lM
+y02teBhd8Cqq0zbEX8TWwSgiUTDpXyVe1XXAI3OUxNnZYFGpEUrjSK63AcEvP7XY
+bFaCwcoS4nlPaHgMg/6SZn2FdU0tf1tbdutvvvYu745vyA++dYcnsdc/r8onxdM=
+=pgHN
 -----END PGP SIGNATURE-----
